# sphinx-doc-sample

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  package.json  playwright.config.ts  pyproject.toml
.dependabot/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.docker/nginx/: redirect_by_lang.conf
.github/: dependabot.yml
.github/workflows/: build.yml  build_and_test.yml  playwright.yml  reusable_exec_playwright.yml  update_screenshots.yml  vrt.yml
.k8s/charts/sphinx-doc-sample/: Chart.yaml  values.yaml
.k8s/charts/sphinx-doc-sample/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
.k8s/charts/sphinx-doc-sample/templates/tests/: test-connection.yaml
source/: conf.py  index.rst
source/locales/ja/LC_MESSAGES/: index.mo  index.po
tests/: example.spec.ts
