[tool.poetry]
name = "sphinx-doc-sample"
version = "0.1.0"
description = "Sample of sphinx document"
authors = ["Ryu Sato <ryu@weseek.co.jp>"]

[tool.poetry.dependencies]
python = "^3.7"
sphinx = "^3.3.1"
sphinx-rtd-theme = "^0.5.0"

[tool.poetry.dev-dependencies]
sphinx-autobuild = "^2020.9.1"
sphinx-intl = "^2.0.1"
watchdog = "^2.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
