[tool.poetry]
name = "sphinx-doc-sample"
version = "0.1.0"
description = "Sample of sphinx document"
authors = ["Ryu Sato <ryu@weseek.co.jp>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "^3.3.1"
sphinx-rtd-theme = "^0.5.0"

[tool.poetry.group.dev.dependencies]
sphinx-autobuild = "^2020.9.1"
sphinx-intl = "^2.0.1"
watchdog = "^0.10.3"

[build-system]
requires = ["poetry>=2.0.1"]
build-backend = "poetry.masonry.api"
